--- a/src/ffmpeg/dune
+++ b/src/ffmpeg/dune
@@ -28,6 +28,16 @@
  (deps (:discover ../gen_code/discover.exe))
  (action (run %{discover})))
 
+(library
+ (name fFmpeg)
+ (public_name ffmpeg)
+ (synopsis "bindings for the ffmpeg library which provides functions for decoding audio and video files")
+ (modules ("Channel_layout" Sample_format Pixel_format Avutil Swscale Codec_id Avcodec Av Swresample_options Swresample Avdevice))
+ (c_names avutil_stubs swscale_stubs avcodec_stubs av_stubs swresample_stubs avdevice_stubs)
+ (libraries bigarray threads.posix)
+ (c_library_flags (:include c_library_flags.sexp))
+ (c_flags (-O2 (:include c_flags.sexp) -DHAS_CHANNEL_LAYOUT -DHAS_FRAME -Wall)))
+
 (rule
  (targets polymorphic_variant_values_stubs.h)
  (deps (:gen ../gen_code/pv2v.exe))
