s/autotools/dune/ (opam package)

--- a/ffmpeg.opam
+++ b/ffmpeg.opam
@@ -1,23 +1,35 @@
 opam-version: "2.0"
-version: "dev"
-maintainer: "Romain Beauxis <toots@rastageeks.org>"
+version: "0.2.1-p1"
+maintainer: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
 authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
-homepage: "https://github.com/savonet/ocaml-ffmpeg"
-bug-reports: "https://github.com/savonet/ocaml-ffmpeg/issues"
+homepage: "https://github.com/qheath/ocaml-ffmpeg"
+bug-reports: "https://github.com/qheath/ocaml-ffmpeg/issues"
+license: "GPL-2"
+synopsis: "Bindings for the ffmpeg library which provides functions for decoding audio and video files"
+description: """
+OCaml interface for the [FFmpeg] Multimedia framework.
+- Av: demuxers and muxers for reading and writing multimedia container
+  formats
+- Avcodec: decoders and encoders for audio, video and subtitle codecs
+- Swresample: audio resampling, rematrixing and sample format
+  conversion operations
+- Swscale: image scaling and color space/pixel format conversion
+  operations
+- Avdevice: input and output devices for grabbing from and rendering
+  to many common multimedia input/output software frameworks
+
+[FFmpeg]: http://ffmpeg.org/"""
 depends: [
   "ocaml" {>= "4.05.0"}
-  "ocamlfind" {build}
-  "conf-pkg-config" {build}
-  "conf-autoconf" {build}
+  "ocamlfind" {build & >= "0.8.1"}
+  "dune" {build}
   "base-bigarray"
+  "base-threads"
 ]
 flags: light-uninstall
 build: [
-  ["git" "submodule" "init"]
-  ["git" "submodule" "update"]
-  ["./bootstrap"]
-  ["./configure" "--prefix" prefix]
-  [make]
+  ["dune" "build" "-p" name "-j" jobs "@install"]
+  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
 ]
 install: [make "install"]
 remove: ["ocamlfind" "remove" "ffmpeg"]
@@ -46,4 +58,4 @@ depexts: [
   ["ffmpeg"] {os-distribution = "nixos"}
   ["ffmpeg"] {os = "macos" & os-distribution = "homebrew"}
 ]
-dev-repo: "git+https://github.com/savonet/ocaml-ffmpeg.git"
+dev-repo: "git+https://github.com/qheath/ocaml-ffmpeg.git"
