--- a/src/ffmpeg/dune
+++ b/src/ffmpeg/dune
@@ -33,7 +33,7 @@
  (public_name ffmpeg)
  (synopsis "bindings for the ffmpeg library which provides functions for decoding audio and video files")
  (modules ("Channel_layout" Sample_format Pixel_format Avutil Swscale Codec_id Avcodec Av Swresample_options Swresample Avdevice Avfilter Input Output))
- (c_names avutil_stubs swscale_stubs avcodec_stubs av_stubs swresample_stubs avdevice_stubs avfilter_stubs input_stubs output_stubs)
+ (c_names avutil_stubs swscale_stubs avcodec_stubs av_stubs swresample_stubs avdevice_stubs avfilter_stubs input_stubs output_stubs offmpeg_stubs)
  (libraries bigarray threads.posix)
  (c_library_flags (:include c_library_flags.sexp))
  (c_flags (-O2 (:include c_flags.sexp) -DHAS_CHANNEL_LAYOUT -DHAS_FRAME -Wall)))
