--- a/dune
+++ b/dune
@@ -4,9 +4,14 @@
  (release
   (flags (:standard -w +A-4@5-7@8-9@11@12@20-35-44-45-48-50 -thread))))
 
+;(rule
+;  (targets out.mp4)
+;  (deps (:offmpeg src/ffmpeg/offmpeg.exe) (:in in.mp4))
+;  (action (run %{offmpeg} %{in} %{targets})))
+
 (rule
   (targets out.mp4)
-  (deps (:offmpeg src/ffmpeg/offmpeg.exe) (:in in.mp4))
+  (deps (:offmpeg src/ffmpeg/offmpeg.exe) (:in in))
   (action (run %{offmpeg} %{in} %{targets})))
 
 (alias
