--- a/src/ffmpeg/dune
+++ b/src/ffmpeg/dune
@@ -34,9 +34,15 @@
  (synopsis "bindings for the ffmpeg library which provides functions for decoding audio and video files")
  (modules ("Channel_layout" Sample_format Pixel_format Avutil Swscale Codec_id Avcodec Av Swresample_options Swresample Avdevice Avfilter Input Output))
  (c_names avutil_stubs swscale_stubs avcodec_stubs av_stubs swresample_stubs avdevice_stubs avfilter_stubs input_stubs output_stubs offmpeg_stubs)
- (libraries bigarray threads.posix)
- (c_library_flags (:include c_library_flags.sexp))
- (c_flags (-O2 (:include c_flags.sexp) -DHAS_CHANNEL_LAYOUT -DHAS_FRAME -Wall)))
+ (libraries bigarray threads.posix str)
+ (c_library_flags (:include c_library_flags.sexp)
+  ;-Wl,--as-needed -Wl,-z,noexecstack -Wl,--warn-common -pthread -lm -lz
+  )
+ (c_flags (-O2 (:include c_flags.sexp) -DHAS_CHANNEL_LAYOUT -DHAS_FRAME -Wall
+           ;-D_ISOC99_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_POSIX_C_SOURCE=200112 -D_XOPEN_SOURCE=600 -DPIC -DZLIB_CONST -std=c11 -fomit-frame-pointer -fPIC -pthread -g -Wdeclaration-after-statement -Wall -Wdisabled-optimization -Wpointer-arith -Wredundant-decls -Wwrite-strings -Wtype-limits -Wundef -Wno-pointer-to-int-cast -Wstrict-prototypes -Wempty-body -Wno-parentheses -Wno-switch -Wno-format-zero-length
+           -Wno-pointer-sign
+           ;-Wno-unused-const-variable -Wno-bool-operation -Werror=format-security -Werror=implicit-function-declaration -Werror=return-type -Werror=vla -Wformat -fdiagnostics-color=auto -Wno-maybe-uninitialized -O3 -fno-math-errno -fno-signed-zeros -fno-tree-vectorize
+          )))
 
 (rule
  (targets polymorphic_variant_values_stubs.h)
@@ -46,4 +52,4 @@
 (executable
  (name offmpeg)
  (modules ("Offmpeg"))
- (libraries ffmpeg))
+ (libraries ffmpeg nelist))
